--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,41 +10,41 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@capacitor/android": "6.1.2",
-    "@capacitor/app": "6.0.1",
-    "@capacitor/browser": "6.0.2",
-    "@capacitor/cli": "6.1.2",
-    "@capacitor/core": "6.1.2",
-    "@capacitor/haptics": "6.0.1",
-    "@capacitor/ios": "6.1.2",
-    "@capacitor/keyboard": "6.0.2",
-    "@capacitor/preferences": "^6.0.2",
-    "@capacitor/status-bar": "6.0.1",
-    "@capacitor/toast": "^6.0.3",
-    "@ionic/core": "8",
-    "@ionic/react": "^8.4.0",
-    "@ionic/react-router": "^8.4.0",
-    "@tanstack/react-query": "^5.60.5",
+    "@capacitor/android": "^7.0.1",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/browser": "^7.0.0",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.1",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
+    "@capacitor/toast": "^7.0.0",
+    "@ionic/core": "^8.4.3",
+    "@ionic/react": "^8.4.3",
+    "@ionic/react-router": "^8.4.3",
+    "@tanstack/react-query": "^5.67.2",
     "@trpc/client": "11.0.0-rc.638",
     "@trpc/react-query": "11.0.0-rc.638",
-    "ionicons": "^7.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "ionicons": "^7.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "superjson": "^2.2.1"
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@capacitor/cli": "^7.0.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2",
+    "vite": "^5.4.14"
   }
 }
